@@ -10,15 +10,19 @@ class cMpvFilebrowser:public cOsdMenu
 {
   private:
     string rootDir;
+    string discDevice;
     static string currentDir;
     static string currentItem;
 
     void ShowDirectory(string Path);
     void AddItem(string Path, string Text, bool IsDir);
     bool PlayFile(string Filename, bool Shuffle=false);
+    bool PlayDisc();
+    bool Mount(string Path);
+    bool Unmount();
 
   public:
-    cMpvFilebrowser(string RootDir);
+    cMpvFilebrowser(string RootDir, string DiscDevice);
     virtual eOSState ProcessKey(eKeys Key);
     static string CurrentDir() { return currentDir; }
 };
